<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp">

    <item
        android:id="@+id/homeFragment"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/portabilityFragment"
        android:title="@string/portability"
        android:icon="@drawable/ic_portability"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/rechargeFragment"
        android:title="@string/recharges"
        android:icon="@drawable/ic_recharge"
        app:showAsAction="always"
        android:enabled="true"/>

    <item
        android:id="@+id/contactFragment"
        android:title="@string/contact"
        android:icon="@drawable/ic_contact"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

</menu>