<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp">

    <ImageView
        android:id="@+id/plan_user_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:src="@drawable/ic_vibration"
        app:tint="@color/black"
        android:contentDescription="@string/user_plan_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/greeting"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/plan_user_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/default_user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_greeting_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_number_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/your_number_is"
        android:textColor="@color/waiting_color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/plan_user_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <TextView
        android:id="@+id/user_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/default_user_number"
        android:textColor="@color/main_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/your_number_is"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>