<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/component_plan_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curved_card_info"
    android:elevation="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp">

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/status_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_circle" />

    <TextView
        android:id="@+id/status_plan_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/status_plan_text"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plan_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/plan_type_text"
        android:textColor="@color/main_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_plan_text" />

    <ImageView
        android:id="@+id/expiration_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/expiration_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_type_text"
        app:srcCompat="@drawable/ic_date"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/expiration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/expiration_text"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/expiration_icon"
        app:layout_constraintTop_toBottomOf="@+id/plan_type_text" />

    <TextView
        android:id="@+id/expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/expiration_date"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/expiration_text"
        app:layout_constraintTop_toBottomOf="@+id/plan_type_text" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#F6F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiration_date">

    </FrameLayout>

    <TextView
        android:id="@+id/description_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/description_text_title"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/description_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="8"
        android:fontFamily="@font/dmsans_regular"
        android:maxLines="8"
        android:text="@string/description_detail"
        android:textColor="@color/text_color"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_title_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
