<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountVerifiedFragment">

    <ImageView
        android:id="@+id/message_sent_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_example"
        app:layout_constraintBottom_toTopOf="@+id/message_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_logo_app_content_description"/>

    <TextView
        android:id="@+id/message_sent"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center"
        android:lines="2"
        android:minLines="2"
        android:singleLine="false"
        android:text="@string/message_sent"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_sent_image" />

    <TextView
        android:id="@+id/user_notification_account_activation"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center"
        android:lines="2"
        android:minLines="2"
        android:singleLine="false"
        android:text="@string/user_notification_account_activation"
        android:textColor="@color/text_secondary_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_sent" />

    <TextView
        android:id="@+id/message_not_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/message_not_received"
        android:textColor="@color/text_color"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/resend_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resend_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/resend_message"

        android:textColor="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>