<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.fragments.PreRegisterFragment">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_logo_app_content_description"
        android:elevation="@dimen/image_elevation"
        android:src="@drawable/logo_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/register"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/sign_in_to_continue_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center"
        android:lines="2"
        android:minLines="2"
        android:singleLine="false"
        android:text="@string/please_insert_your_personal_data_for_new_account"
        android:textColor="@color/text_secondary_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_phone_pre_register_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_to_continue_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_phone_pre_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:fontFamily="@font/dmsans_regular"
            android:textColor="@color/text_secondary_color"
            android:textSize="13sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/accept_terms_conditions_pre_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/accept_terms_conditions_pre_register"
        android:textColor="@color/text_secondary_color"
        android:textSize="12sp"
        android:fontFamily="@font/dmsans_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_phone_pre_register_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pre_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/dmsans_bold"
        android:padding="@dimen/button_padding"
        android:text="@string/register_me"
        android:textAllCaps="false"
        android:textColor="@color/app_background"
        android:textSize="13sp"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accept_terms_conditions_pre_register" />

    <TextView
        android:id="@+id/already_have_an_account_pre_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/already_have_account_login"
        android:textColor="@color/text_secondary_color"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>