<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountCreatedFragment">

    <ImageView
        android:id="@+id/account_created_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image_logo_app_content_description"
        android:src="@drawable/logo_example"
        app:layout_constraintBottom_toTopOf="@+id/account_created"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_created"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center"
        android:lines="2"
        android:minLines="2"
        android:singleLine="false"
        android:text="@string/account_created"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_created_image" />

    <TextView
        android:id="@+id/user_notification_account_created"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center"
        android:lines="3"
        android:minLines="3"
        android:singleLine="false"
        android:text="@string/user_notification_account_created"
        android:textColor="@color/text_secondary_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_created" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/dmsans_bold"
        android:padding="@dimen/button_padding"
        android:text="@string/continue_application"
        android:textAllCaps="false"
        android:textColor="@color/app_background"
        android:textSize="13sp"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>